--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=/tapwater/",
+    "ghpages": "angular-cli-ghpages --dir=dist/tapwater --repo=https://@github.com/DiogoGit/tapwater.git --name=DiogoGit --email=diogogithub@hotmail.com",
+    "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "json:server": "json-server --watch db.json",
