--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --base-href=/tapwater/",
-    "ghpages": "angular-cli-ghpages --dir=dist/tapwater --repo=https://@github.com/DiogoGit/tapwater.git --name=DiogoGit --email=diogogithub@hotmail.com",
+    "ghpages": "angular-cli-ghpages --dir=dist/tapwater-app",
     "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
